# Brain_tumor_classification

./: .gitignore  LICENSE  README.md  brain_tumor_classification.ipynb  requirements.txt
brain_tumor_classification/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.sh  setup.py
brain_tumor_classification/notebooks/: brain_tumor_classification.ipynb
brain_tumor_classification/src/: __init__.py
brain_tumor_classification/src/data/: __init__.py  load_data.py
brain_tumor_classification/src/models/: __init__.py  model.py  train.py
brain_tumor_classification/static/css/: style.css
brain_tumor_classification/static/js/: script.js
brain_tumor_classification/templates/: 404.html  500.html  index.html
brain_tumor_classification/tests/: test_imports.py
